<resources>
    <string name="app_name">naivorapp</string>

    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>

    <string name="login_tip">用户登录</string>
    <string name="forget_psw"><u>忘记密码？</u></string>
    <string name="login_now">立即登录</string>
    <string name="register_now">马上注册</string>

    <string name="hint_account">用户名或邮箱</string>
    <string name="hint_psw">密码</string>

    <string name="register_tip">注册</string>
    <string name="register_submit">提交注册</string>

    <string name="hint_name">用户名</string>
    <string name="hint_email">邮箱</string>
    <string name="hint_pswagain">再次输入密码</string>


    <string name="resetpsw_submit">验证邮箱</string>
    <string name="resetpsw_reset">重置密码</string>
    <string name="hint_registeremail">注册邮箱</string>

    <string name="empty_message">暂时没有数据</string>
    <string name="loading_message">正在加载中...</string>
    <string name="error_message">加载失败</string>
    <string name="empty_button">重试</string>
    <string name="loading_button">取消</string>
    <string name="error_button">重试</string>

    <string name="preview">预览</string>
    <string name="crop">剪裁</string>
    <string name="calcle">取消</string>
    <string name="allpicture">全部图片</string>
    <string name="picture">相册</string>
    <string name="origin_scale">原比例</string>
    <string name="square_scale">正方形</string>
    <string name="free_scale">自由剪裁</string>
    <string name="circle">圆形</string>
    <string name="circle_square">圆角矩形</string>

    <string name="loading_more">努力加载中...</string>
    <string name="no_moredate">--   木有更多了   --</string>

    <array name="pick_image">
        <item>拍照</item>
        <item>相册</item>
        <item>取消</item>
    </array>

    <array name="list_data">
        <item>春江潮水连海平</item>
        <item>海上明月共潮生</item>
        <item>滟滟随波千万里</item>
        <item>何处春江无月明</item>
        <item>江流宛转绕芳甸</item>
        <item>月照花林皆似霰</item>
        <item>空里流霜不觉飞</item>
        <item>汀上白沙看不见</item>
        <item>江天一色无纤尘</item>
        <item>皎皎空中孤月轮</item>
        <item>江畔何人初见月</item>
        <item>江月何年初照人</item>
        <item>人生代代无穷已</item>
        <item>江月年年望相似</item>
        <item>不知江月待何人</item>
        <item>但见长江送流水</item>
        <item>白云一片去悠悠</item>
        <item>青枫浦上不胜愁</item>
        <item>谁家今夜扁舟子</item>
        <item>何处相思明月楼</item>
        <item>可怜楼上月徘徊</item>
        <item>应照离人妆镜台</item>
        <item>玉户帘中卷不去</item>
        <item>捣衣砧上拂还来</item>
        <item>此时相望不相闻</item>
        <item>愿逐月华流照君</item>
        <item>鸿雁长飞光不度</item>
        <item>鱼龙潜跃水成文</item>
        <item>昨夜闲潭梦落花</item>
        <item>可怜春半不还家</item>
        <item>江水流春去欲尽</item>
        <item>江潭落月复西斜</item>
        <item>斜月沉沉藏海雾</item>
        <item>碣石潇湘无限路</item>
        <item>不知乘月几人归</item>
        <item>落月摇情满江树</item>
    </array>


    <string name="menu_filter_by_grow_zone">按生长区筛选</string>
    <string name="plant_detail_image_content_description">植物图片</string>
    <string name="my_garden_title">我的花园</string>
    <string name="plant_list_title">植物目录</string>
    <string name="available">植物品种</string>
    <string name="plant_details_title">植物介绍</string>
    <string name="add_plant">添加植物</string>
    <string name="garden_empty">花园里还没有植物</string>
    <string name="added_plant_to_garden">添加了新植物</string>
    <string name="plant_date_header">种下日期</string>
    <string name="watered_date_header">最后浇水</string>
    <string name="menu_item_share_plant">分享</string>
    <string name="share_text_plant">在安卓 Sunflower APP 上看看这 %s</string>

    <!-- String plurals and their related prefix / suffix strings -->
    <!-- Item quantities for zero and one are not used in Chinese -->
    <string name="watering_needs_prefix">浇水指南</string>
    <plurals name="watering_needs_suffix">
        <item quantity="other">每隔 %d 天</item>
    </plurals>

    <plurals name="watering_next">
        <item quantity="other">%d 天后浇水</item>
    </plurals>

    <!-- Accessibility -->
    <string name="a11y_plant_item_image">植物图片</string>
    <string name="gallery_title">(translate me) Photos by Unsplash</string>
    <string name="gallery_content_description">(translate me) Navigate to gallery screen</string>

</resources>
