<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016. Naivor.All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_stroke_gray_only_bottom"
        >

        <ImageView
            android:id="@+id/top_home"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:scaleType="center"
            android:src="@mipmap/ic_toolbar_navigation"
            />

        <TextView
            android:id="@+id/top_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/top_home"
            android:gravity="center_vertical"
            android:text="@string/picture"
            android:textColor="@color/font_red"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/top_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/allpicture"
            android:textColor="@color/font_red"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/top_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/calcle"
            android:textColor="@color/font_red"
            android:textSize="18sp"/>
    </RelativeLayout>

    <ViewSwitcher
        android:id="@+id/vs_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ViewSwitcher
                android:id="@+id/vs_pictures"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <GridView
                    android:id="@+id/gv_pictures"
                    android:layout_width="match_parent"
                    android:numColumns="3"
                    android:background="@color/layout_background"
                    android:listSelector="@color/layout_background"
                    android:layout_height="match_parent">

                </GridView>

                <android.support.v4.view.ViewPager
                    android:id="@+id/vp_pictures"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </android.support.v4.view.ViewPager>

            </ViewSwitcher>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingRight="20dp"
                android:background="@drawable/bg_stroke_gray_only_top"
                >

                <TextView
                    android:id="@+id/bottom_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/preview"
                    android:enabled="false"
                    android:layout_marginLeft="40dp"
                    android:textColor="@color/btn_selector_red_gray"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/bottom_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/bottom_title"
                    android:gravity="center_vertical"
                    android:text="@string/crop"
                    android:enabled="false"
                    android:textColor="@color/btn_selector_red_gray"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/bottom_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="确定"
                    android:enabled="false"
                    android:background="@drawable/bg_btn_selector_little_round_red_gray"
                    android:textColor="@color/btn_selector_white_gray"
                    android:textSize="14sp"/>
            </RelativeLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/lv_paths"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/layout_background"
            android:divider="@color/gray_transluction"
            android:dividerHeight="1px"
            android:listSelector="@null"
            >

        </ListView>

    </ViewSwitcher>

</LinearLayout>
